feature: Add support for tenant-specific identity providers